# archivation-dearchivation

./: .gitignore  CMakeLists.txt  README.md  arch.h  archived.txt  build.bat  build.sh  dearch.h  main.cpp
src/: main.cpp
src/archiver/: archiver.cpp  archiver.h
